kubernetes/aws/task-004-oauth2-proxy/kafdrop-chart/kafdrop-manifests.yaml
---
# Source: kafdrop/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  labels:
    app.kubernetes.io/name: kafdrop
    helm.sh/chart: kafdrop-0.1.0
    app.kubernetes.io/instance: kafdrop
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http

      nodePort: 30900

  selector:
    app.kubernetes.io/name: kafdrop
    app.kubernetes.io/instance: kafdrop
---
# Source: kafdrop/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  labels:
    app.kubernetes.io/name: kafdrop
    helm.sh/chart: kafdrop-0.1.0
    app.kubernetes.io/instance: kafdrop
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kafdrop
      app.kubernetes.io/instance: kafdrop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafdrop
        app.kubernetes.io/instance: kafdrop
      annotations:
    spec:
      containers:
        - name: kafdrop
          image: "obsidiandynamics/kafdrop:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: http
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 1m
              memory: 128Mi
---
# Source: kafdrop/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafdrop-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`kafdrop.somedomain.com`) && PathPrefix(`/`)
      middlewares:
      - name: headers
      - name: redirect
      - name: errors
      priority: 1
      services:
        - name: kafdrop-release
          port: 9000
    - kind: Rule
      match: Host(`kafdrop.somedomain.com`) && (PathPrefix(`/oauth2/`) || Path(`/logout`))
      middlewares:
        - name: cors-security-headers
      priority: 2
      services:
        - name: oauth-release-oauth2-proxy
          port: 8080
  tls: {}
---
# Source: kafdrop/templates/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
spec:
  headers:
    customRequestHeaders:
      X-Auth-Request-Redirect: https://kafdrop.somedomain.com/
    customResponseHeaders:
      X-Auth-Request-Redirect: https://kafdrop.somedomain.com/
---
# Source: kafdrop/templates/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
spec:
  forwardAuth:
    address: https://auth.somedomain.com
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization
---
# Source: kafdrop/templates/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: errors
spec:
  errors:
    status:
      - "401"
    query: /oauth2/sign_in
    service:
      name: kafdrop-release
      port: 9000
